# tech_and_magic

./: .gitignore  AGENTS.md  Cargo.toml  ci.sh
.github/workflows/: ci.yaml  ci.yml
.run/: Server && Client.run.xml
client/: Cargo.toml
client/src/: camera_plugin.rs  connected_plugin.rs  connecting_plugin.rs  connection_error_plugin.rs  game_state.rs  key_binding_plugin.rs  loading_plugin.rs  loading_ui_plugin.rs  main.rs  main_menu_plugin.rs  network_plugin.rs  render_fps_plugin.rs  test_cube_plugin.rs  test_loading_plugin.rs
core/loading/: Cargo.toml
core/loading/src/: app_loading_registrar.rs  lib.rs
core/log/: Cargo.toml
core/log/src/: lib.rs
core/network/client/: Cargo.toml
core/network/client/src/: lib.rs
core/network/server/: Cargo.toml
core/network/server/src/: lib.rs
core/network/shared/: Cargo.toml
core/network/shared/src/: app_channel_registrar.rs  channel_registration.rs  lib.rs
core/players/client/: Cargo.toml
core/players/client/src/: lib.rs
core/players/server/: Cargo.toml
core/players/server/src/: lib.rs
core/players/shared/: Cargo.toml
core/players/shared/src/: lib.rs
feature/game_state/: Cargo.toml
feature/game_state/src/: lib.rs
feature/loading/: Cargo.toml
feature/loading/src/: lib.rs
feature/loading_state/: Cargo.toml
feature/network/client/: Cargo.toml
feature/network/client/src/: lib.rs
feature/network/server/: Cargo.toml
feature/network/server/src/: lib.rs
feature/network/shared/: Cargo.toml
feature/network/shared/src/: channel_registration.rs  lib.rs
feature/sync_player_position/client/: Cargo.toml
feature/sync_player_position/client/src/: lib.rs
feature/sync_player_position/server/: Cargo.toml
feature/sync_player_position/server/src/: lib.rs
feature/sync_player_position/shared/: Cargo.toml
feature/sync_player_position/shared/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  network_plugin.rs
src/: main.rs
