[workspace]
resolver = "2"
members = [
    "client",
    "server",
]

[workspace.dependencies]
# Основной framework игрового движка.
bevy = { version = "0.14" }

# Биндинг для отображения egui внутри bevy.
bevy_egui = { version = "0.28" }

# Библиотека для создания интерфейсов.
egui = { version = "0.28" }

# TODO включить оптимизации после возникновения проблем с производительностью
[profile.dev]
opt-level = 0

# TODO включить оптимизации после возникновения проблем с производительностью
[profile.dev.package."*"]
opt-level = 0