[workspace]
resolver = "2"
members = [
    "core/log",
    "feature/game_state",
    "feature/loading",
    "feature/network/client",
    "feature/network/server",
    "feature/network/shared",
    "client",
    "server",
]

[workspace.dependencies]
# Основной framework игрового движка.
bevy = { version = "0.14" }

# Биндинг для отображения egui внутри bevy.
bevy_egui = { version = "0.28" }

# Сетевой слой.
bevy_renet = { version = "0.0.12" }

# Библиотека для создания интерфейсов.
egui = { version = "0.28" }

# TODO включить оптимизации после возникновения проблем с производительностью
[profile.dev]
opt-level = 0

# TODO включить оптимизации после возникновения проблем с производительностью
[profile.dev.package."*"]
opt-level = 0