[workspace]
resolver = "2"
members = [
    "core/loading",
    "core/log",
    "core/network/client",
    "core/network/server",
    "core/network/shared",
    "feature/game_state",
    "feature/sync_player_position/client",
    "feature/sync_player_position/server",
    "feature/sync_player_position/shared",
    "client",
    "server",
]

[workspace.dependencies]
# Основной framework игрового движка.
bevy = { version = "0.14" }

# Биндинг для отображения egui внутри bevy.
bevy_egui = { version = "0.28" }

# Сетевой слой.
bevy_renet = { version = "0.0.12" }

# Библиотека для создания интерфейсов.
egui = { version = "0.28" }

# TODO включить оптимизации после возникновения проблем с производительностью
[profile.dev]
opt-level = 0

# TODO включить оптимизации после возникновения проблем с производительностью
[profile.dev.package."*"]
opt-level = 0