[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
core_loading = { path = "../core/loading" }
core_log = { path = "../core/log" }
feature_game_state = { path = "../feature/game_state" }
feature_network_client = { path = "../feature/network/client" }

bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_renet = { workspace = true }
egui = { workspace = true }