[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
core_loading = { path = "../core/loading" }
core_log = { path = "../core/log" }
core_network_client = { path = "../core/network/client" }
feature_game_state = { path = "../feature/game_state" }

bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_renet = { workspace = true }
egui = { workspace = true }